# SO2--Projekt2

./: .gitignore  CMakeLists.txt  main.cpp
